# Delynoi

./: .gitignore  CMakeLists.txt  README.md
delynoi/: CMakeLists.txt
delynoi/include/delynoi/config/: DelynoiConfig.h
delynoi/include/delynoi/models/: Mesh.h  PolygonalMesh.h  Region.h  Triangulation.h
delynoi/include/delynoi/models/basic/: Angle.h  IndexSegment.h  Point.h  PointSegment.h  Segment.h
delynoi/include/delynoi/models/generator/: Functor.h  PointGenerator.h  RandomDouble.h  RandomInteger.h  functions.h
delynoi/include/delynoi/models/generator/functions/: RandomDouble.h  RandomInteger.h  functions.h
delynoi/include/delynoi/models/generator/noise/: RandomDoubleNoise.h  RandomIntegerNoise.h  noise.h
delynoi/include/delynoi/models/hole/: CircularHole.h  Hole.h  PolygonalHole.h
delynoi/include/delynoi/models/hole/clipper/: ClipperWrapper.h
delynoi/include/delynoi/models/hole/clipper/lib/: clipper.hpp
delynoi/include/delynoi/models/neighbourhood/: EdgeData.h  Neighbours.h  NeighboursByPoint.h  NeighboursBySegment.h  PointMap.h  SegmentMap.h
delynoi/include/delynoi/models/polygon/: BoundingBox.h  Circle.h  Polygon.h  Triangle.h
delynoi/include/delynoi/models/structures/: NeighbourInfo.h
delynoi/include/delynoi/triangulation/: CenterTriangulationGenerator.h  DelaunayTriangulationGenerator.h  EarTriangulationGenerator.h  TriangulationGenerator.h
delynoi/include/delynoi/utilities/: convexHull.h  delynoi_utilities.h  geometryFunctions.h  xpolyutilities.h
delynoi/include/delynoi/voronoi/: DelaunayToVoronoi.h  MeshGenerator.h  TriangleDelaunayGenerator.h  TriangleMeshGenerator.h  TriangleVoronoiGenerator.h
delynoi/include/delynoi/voronoi/lib/: CMakeLists.txt  triangle.c  triangle.h
delynoi/include/delynoi/voronoi/structures/: DelaunayInfo.h  PointData.h  mapdata.h
delynoi/lib/: triangle.c  triangle.h
delynoi/src/config/: DelynoiConfig.cpp
delynoi/src/models/: Mesh.cpp  PolygonalMesh.cpp  Region.cpp  Triangulation.cpp
delynoi/src/models/basic/: IndexSegment.cpp  Point.cpp  PointSegment.cpp  Segment.cpp
delynoi/src/models/generator/: FunctorClasses.cpp  PointGenerator.cpp  RandomDouble.cpp  RandomInteger.cpp  functions.cpp
delynoi/src/models/generator/functions/: FunctorClasses.cpp  RandomDouble.cpp  RandomInteger.cpp  functions.cpp
delynoi/src/models/generator/noise/: RandomDoubleNoise.cpp  RandomIntegerNoise.cpp  noise.cpp
delynoi/src/models/hole/: CircularHole.cpp  PolygonalHole.cpp
delynoi/src/models/hole/clipper/: ClipperWrapper.cpp
delynoi/src/models/hole/clipper/lib/: clipper.cpp
delynoi/src/models/neighbourhood/: EdgeData.cpp  Neighbours.cpp  NeighboursByPoint.cpp  NeighboursBySegment.cpp  PointMap.cpp  SegmentMap.cpp
delynoi/src/models/polygon/: BoundingBox.cpp  Circle.cpp  Polygon.cpp  Triangle.cpp
delynoi/src/triangulation/: CenterTriangulationGenerator.cpp  DelaunayTriangulationGenerator.cpp  EarTriangulationGenerator.cpp
delynoi/src/utilities/: convexHull.cpp  delynoi_utilities.cpp  geometryFunctions.cpp  xpolyutilities.cpp
delynoi/src/voronoi/: DelaunayToVoronoi.cpp  TriangleDelaunayGenerator.cpp  TriangleMeshGenerator.cpp  TriangleVoronoiGenerator.cpp
lib/utilities/: CMakeLists.txt
lib/utilities/include/utilities/: Pair.h  Precision.h  UniqueList.h  maputils.h  utilities.h
lib/utilities/src/: utilities.cpp
test/: AllTests.cpp  CMakeLists.txt  CreateFromFileTest.cpp  CustomGeneratorTestMain.cpp  LShapeTestMain.cpp  ReadPointsFromFileTestMain.cpp  SimpleSquareTestMain.cpp  SingleScriptTest.cpp  SwissCheeseTestMain.cpp  TimeSquareTestMain.cpp  UnicornTestMain.cpp
test/test_examples/: points_file.txt
